--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -1,5 +1,5 @@
 <div ng-show="isFeatureActive('inbox')" id="inbox-container" ng-controller="InboxController">
-  <section ng-hide="isDesktop && isMenuOpen" id="inbox" class="two-column-grid page header-page" snap-drawer-drag="inbox">
+  <section id="inbox" class="two-column-grid page header-page" snap-drawer-drag="inbox">
     <div class="column">
       <div class="page-heading" ng-init="heading = 'inbox'; omnibarFeature = 'inbox'" ng-include="'static/app/main/omnibar.html'"></div>
       <div ng-hide="omnibarVisible" id="inbox-page-content-container" class="content-container page-content-container no-heading-content-container omnibar-animation">
@@ -22,7 +22,7 @@
               </div>
             </div>
           </form>
-          <footer ng-if="!(isDesktop && isMenuOpen) && (items.length > 0 && sortingItem === undefined)">
+          <footer ng-if="(items.length > 0 && sortingItem === undefined)">
             <nav id="inbox-footer" class="swiper-no-swiping item-actions" role="navigation">
               <button id="scroll-to-element" class="wide-button border-button" ng-click="sortInbox()">
                 <span class="button-text" ng-bind="getSortingText()"></span>
@@ -36,5 +36,4 @@
       TODO
     </aside>
   </section>
-  <div ng-if="isDesktop && isMenuOpen" id="desktop-menu" class="desktop-menu-animation" ng-include="'static/app/auth/menu.html'"></div>
 </div>
