--- a/frontend/core/src/main/webapp/static/app/main/omnibar.html
+++ b/frontend/core/src/main/webapp/static/app/main/omnibar.html
@@ -1,4 +1,4 @@
-<div id="omnibar-wrapper" class="swiper-no-swiping">
+<div ng-init="omnibarKeywords = {isVisible: false}" id="omnibar-wrapper" class="swiper-no-swiping">
   <form id="{{heading}}-omnibar" ng-init="setOmnibarPlaceholder(omnibarFeature, heading)" role="form" name="{{heading}}-addOmniItem" ng-submit="saveOmnibarText(omnibarText)" autocapitalize="none" autocorrect="off">
     <div class="form-group">
       <div ng-class="(omnibarVisible && 'omnibar-visible') || (!omnibarVisible && 'omnibar-hidden')">
@@ -33,10 +33,36 @@
         </button>
       </li>
     </ul>
+
+    <button class="small-font button" ng-class="omnibarKeywords.isVisible ? 'selected-keyword' : 'keyword'" ng-click="omnibarKeywords.isVisible = !omnibarKeywords.isVisible; clearSelectedOmnibarKeywords()">
+      <span ng-bind="omnibarKeywords.isVisible ? 'hide' : 'show'"></span> keywords <strong ng-bind="omnibarKeywords.isVisible ? 'x' : '+'"></strong>
+    </button>
+
+    <div ng-if="omnibarKeywords.isVisible" class="keywords-container">
+      <button ng-init="isKeywordSelected = false" ng-repeat="keyword in getSelectedAndFilterUnselectedKeywords()" ng-click="isKeywordSelected = !isKeywordSelected; toggleKeywordSelected(keyword);" class="button small-font keyword" ng-class="isKeywordSelected ? 'selected-keyword' : 'keyword'">
+        {{keyword.title}} <strong ng-bind="isKeywordSelected ? 'x' : '+'"></strong>
+      </button>
+    </div>
+
   </div>
   <div ng-if="omnibarVisible === heading" id="omnibar-results" class="swiper-no-swiping" ng-style="{height: getOmnibarSearchResultsHeight()}" data-snap-ignore="true" scroll-to>
+
+    <div ng-if="omnibarKeywords.isVisible && !isLoading">
+      <div ng-show="filteredNotes.length" class="filtered-items">
+        <h3><a href ng-click="gotoNotes()">notes</a></h3>
+        <div class="inner-page-content-container" accordion>
+          <div ng-repeat="note in filteredNotes = getFilteredOmnibarNotes()">
+            <div accordion-title="note" edit-item="editNote(note)" edit-item-title="editNoteTitle(note)" has-complete="false" toggle-complete></div>
+            <div ng-if="isOpen(note)" class="accordion-body" editable-field-container="auto">
+              <div class="accordion-inner" ng-include="'static/app/notes/noteActions.html'"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div ng-if="!isSearchActive() || isLoading" id="filtered-items-placeholder" ng-style="{width: getColumnWidth()}" ng-click="clearOmnibar(heading)">&nbsp;</div>
-    <div ng-if="isSearchActive() && !isLoading" id="filtered-items-container">
+    <div ng-if="isSearchActive() && !omnibarKeywords.isVisible && !isLoading" id="filtered-items-container">
       <div ng-show="filteredItems.length" class="filtered-items">
         <h3 ><a href ng-click="gotoInbox()">inbox</a></h3>
         <div class="inner-page-content-container" accordion>
