--- a/frontend/core/src/main/webapp/static/app/base/about.html
+++ b/frontend/core/src/main/webapp/static/app/base/about.html
@@ -1,7 +1,7 @@
 <div id="about-container" ng-controller="AboutController">
   <section id="about" class="one-column-grid page" snap-drawer-drag="about">
     <div class="column">
-      <div class="content-container simple-content-container">
+      <div ng-hide="omnibarVisible" class="content-container simple-content-container">
         <ul>
           <li class="simple-content">
             <h3>version</h3>
