--- a/frontend/core/src/main/webapp/static/app/admin/admin.html
+++ b/frontend/core/src/main/webapp/static/app/admin/admin.html
@@ -1,7 +1,7 @@
 <div id="admin-container" ng-controller="AdminController">
   <section id="admin" class="one-column-grid page" snap-drawer-drag="admin">
     <div class="column">
-      <div class="content-container simple-content-container" ng-switch on="adminMode">
+      <div ng-hide="omnibarVisible" class="content-container simple-content-container" ng-switch on="adminMode">
         <ul ng-switch-default>
           <li class="simple-content">
             <h3>users</h3>
