--- a/frontend/core/src/main/webapp/static/app/main/main.html
+++ b/frontend/core/src/main/webapp/static/app/main/main.html
@@ -1,9 +1,8 @@
 <div id="menu" ng-include="'static/app/auth/menu.html'" class="snap-drawer snap-drawer-left" scrollable></div>
 <div id="feature-container-wrapper">
-  <div id="feature-container" feature-container ng-controller="MainController">
-    <header ng-show="isContentFeatureActive()" class="page-header" ng-class="omnibarVisible && 'header-hidden'" ng-include="'static/app/main/pageHeader.html'"></header>
-    <header ng-if="isSystemFeatureActive()" class="static-page-header" ng-include="'static/app/main/staticPageHeader.html'"></header>
-
+  <div id="feature-container" feature-container ng-controller="MainController" ng-class="(omnibarVisible && 'omnibar-visible') || (!omnibarVisible && 'omnibar-hidden')">
+    <header class="static-page-header" ng-hide="omnibarVisible" ng-include="'static/app/main/staticPageHeader.html'"></header>
+    <div ng-include="'static/app/main/omnibar.html'" include-replace></div>
     <div ng-if="isContentFeatureActive('tasks')" ng-include="'static/app/tasks/tasksSlides.html'" include-replace></div>
     <div ng-if="isFeatureActive('taskEdit')" ng-include="'static/app/tasks/editTask.html'" include-replace></div>
     <div ng-if="isContentFeatureActive('notes')" ng-include="'static/app/notes/notesSlides.html'" include-replace></div>
