Removed separate edit screens for item, list and context

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -76,6 +76,7 @@
     <script src="static/app/base/accordionTitleDirective.js"></script>
     <script src="static/app/base/accordionTitleLinkDirective.js"></script>
     <script src="static/app/base/expandingTextareaDirective.js"></script>
+    <script src="static/app/base/itemCoreFieldsDirective.js"></script>
     <script src="static/app/base/featureContainerDirective.js"></script>
     <script src="static/app/base/snapDrawerDragDirective.js"></script>
     <script src="static/app/base/scrollableDirective.js"></script>
