--- a/frontend/core/src/main/webapp/static/app/main/omnibar.html
+++ b/frontend/core/src/main/webapp/static/app/main/omnibar.html
@@ -52,7 +52,7 @@
         <h3><a href ng-click="gotoNotes()">notes</a></h3>
         <div class="inner-page-content-container" accordion>
           <div ng-repeat="note in filteredNotes = getFilteredOmnibarNotes()">
-            <div accordion-title="note" edit-item="editNote(note)" edit-item-title="editNoteTitle(note)" has-complete="false" toggle-complete></div>
+            <div accordion-title="note" edit-item="editNote(note)" edit-item-fields="editNoteFields(note)" has-complete="false" toggle-complete></div>
             <div ng-if="isOpen(note)" class="accordion-body" editable-field-container="auto">
               <div class="accordion-inner" ng-include="'static/app/notes/noteActions.html'"></div>
             </div>
@@ -67,8 +67,9 @@
         <h3 ><a href ng-click="gotoInbox()">inbox</a></h3>
         <div class="inner-page-content-container" accordion>
           <div ng-repeat="item in filteredItems = (items | filter:{title:searchText.delayed} | limitTo:10)">
-            <div accordion-title="item" edit-item="editItem(item)" edit-item-title="editItemTitle(item)" toggle-complete="false"></div>
+            <div accordion-title="item" edit-item="editItem(item)" edit-item-inline="true" edit-item-fields="editItemFields(item)" toggle-complete="false"></div>
             <div ng-if="isOpen(item)" class="accordion-body" editable-field-container="auto">
+              <div item-core-fields="item" item-core-fields-details="itemDetails"></div>
               <div ng-include="'static/app/main/itemActions.html'"></div>
             </div>
           </div>
@@ -78,7 +79,7 @@
         <h3><a href ng-click="gotoTasks()">tasks</a></h3>
         <div class="inner-page-content-container" accordion>
           <div ng-repeat="task in filteredTasks = (allActiveTasks | filter:{title:searchText.delayed} | limitTo:10)">
-            <div accordion-title="task" edit-item="editTask(task)" edit-item-title="editTaskTitle(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
+            <div accordion-title="task" edit-item="editTask(task)" edit-item-fields="editTaskFields(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
             <div ng-if="isOpen(task)" class="accordion-body" editable-field-container="auto">
               <div class="accordion-inner" ng-init="initializeTask(task)" ng-include="'static/app/tasks/taskActions.html'"></div>
             </div>
@@ -89,7 +90,7 @@
         <h3><a href ng-click="gotoNotes()">notes</a></h3>
         <div class="inner-page-content-container" accordion>
           <div ng-repeat="note in filteredNotes = (allNotes | filter:{title:searchText.delayed} | limitTo:10)">
-            <div accordion-title="note" edit-item="editNote(note)" edit-item-title="editNoteTitle(note)" has-complete="false" toggle-complete></div>
+            <div accordion-title="note" edit-item="editNote(note)" edit-item-fields="editNoteFields(note)" has-complete="false" toggle-complete></div>
             <div ng-if="isOpen(note)" class="accordion-body" editable-field-container="auto">
               <div class="accordion-inner" ng-include="'static/app/notes/noteActions.html'"></div>
             </div>
