--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -6,8 +6,9 @@
           <div class="accordion-wrapper">
             <div class="inner-page-content-container" accordion>
               <div ng-if="showContent('inbox')" ng-repeat="item in items">
-                <div accordion-title="item" edit-item="editItem(item)" edit-item-title="editItemTitle(item)" has-complete="false" toggle-complete></div>
+                <div accordion-title="item" edit-item="editItem(item)" edit-item-inline="true" edit-item-fields="editItemFields(item)" has-complete="false" toggle-complete></div>
                 <div ng-if="isOpen(item) || isInboxSorting(item)" class="accordion-body" editable-field-container="auto">
+                  <div item-core-fields="item" item-core-fields-details="itemDetails"></div>
                   <div class="accordion-inner" ng-include="'static/app/main/itemActions.html'"></div>
                 </div>
               </div>
