Fixed hidden footer, also on inbox

--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -1,6 +1,6 @@
 <div ng-show="isFeatureActive('inbox')" id="inbox-container" ng-controller="InboxController">
   <section id="inbox" class="two-column-grid page header-page" snap-drawer-drag="inbox">
-    <div class="column">
+    <div class="column hide-footer">
       <div ng-hide="omnibarVisible" id="inbox-page-content-container" class="content-container page-content-container no-heading-content-container">
         <div class="scroll-container" scroll-to>
           <div class="accordion-wrapper">
