Set date/Snooze update.

--- a/frontend/core/src/main/webapp/static/app/tasks/taskActions.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskActions.html
@@ -2,7 +2,7 @@
   <ul ng-if="openSnooze.isOpen === false" class="button-row item-actions">
     <li class="button-container left-of-two">
       <button type="button" class="normal-button" ng-click="openSnooze.isOpen = true">
-        date
+        set date
       </button>
     </li>
     <li class="button-container right-of-two">
@@ -13,22 +13,25 @@
   </ul>
   <div ng-if="openSnooze.isOpen === true" class="item-actions small-font">
     <ul class="button-row">
-      <li class="button-container left-of-three">
-        <button type="button" class="highlighted-button" ng-disabled="isTaskDateTodayOrLess(task)" ng-click="closeAndCall(task, setDateToday)">today</button>
+      <li ng-switch="isTaskDateTodayOrLess(task)" class="button-container left-of-three">
+        <button ng-switch-when="true" type="button" class="highlighted-button" ng-click="closeAndCall(task, setDateTomorrow)">tomorrow</button>
+        <button ng-switch-when="false" type="button" class="highlighted-button" ng-click="closeAndCall(task, setDateNextDay)">next day</button>
+        <button ng-switch-default type="button" class="highlighted-button" ng-click="closeAndCall(task, setDateToday)">today</button>
       </li>
       <li class="button-container center-of-three">
-        <button type="button" class="highlighted-button" ng-disabled="isTaskDateTomorrow(task)" ng-click="closeAndCall(task, setDateTomorrow)">tomorrow</button>
+        <button ng-if="!taskHasDate(task)" type="button" class="highlighted-button" ng-click="closeAndCall(task, setDateTomorrow)">tomorrow</button>
+        <button ng-if="taskHasDate(task)" type="button" class="highlighted-button" ng-click="closeAndCall(task, setDateTwoDaysLater)">2 days later</button>
       </li>
       <li class="button-container right-of-three">
-        <button type="button" class="highlighted-button" ng-disabled="isTaskDateSaturday(task)" ng-click="closeAndCall(task, setDateWeekend)">weekend</button>
+        <button type="button" class="highlighted-button" ng-click="closeAndCall(task, setDateWeekend)">weekend</button>
       </li>
     </ul>
     <ul class="button-row">
       <li class="button-container left-of-three">
-        <button type="button" class="highlighted-button" ng-disabled="isTaskDateFirstDayOfNextWeek(task)" ng-click="closeAndCall(task, setDateFirstDayOfNextWeek)">next week</button>
+        <button type="button" class="highlighted-button" ng-click="closeAndCall(task, setDateFirstDayOfNextWeek)">next week</button>
       </li>
       <li class="button-container center-of-three">
-        <button type="button" class="highlighted-button" ng-disabled="isTaskDateFirstDayOfNextMonth(task)" ng-click="closeAndCall(task, setDateFirstDayOfNextMonth)">next month</button>
+        <button type="button" class="highlighted-button" ng-click="closeAndCall(task, setDateFirstDayOfNextMonth)">next month</button>
       </li>
       <li class="button-container right-of-three">
         <div class="form-group">
@@ -37,7 +40,7 @@
             <input type="date" id="taskDue" class="swiper-no-swiping highlighted-link" ng-model="task.date" ng-blur="hideDateInput()" date-input="{{openSnooze.showPickDate}}" date-input-set-focus="true">
           </div>
           <div ng-if="openSnooze.showPickDate === false" class="item-actions">
-            <span class="simple-input highlighted-link" ng-click="openSnooze.showPickDate = true">pick date</span>
+            <span class="simple-input highlighted-link" ng-click="openSnooze.showPickDate = true">set date</span>
           </div>
         </div>
       </li>
